--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:mobile": "playwright test --project='Mobile Chrome' --project='Mobile Safari'",
-    "test:e2e:debug": "playwright test --debug"
+    "test:e2e:debug": "playwright test --debug",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "prepare": "husky"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -84,6 +87,15 @@
     "xlsx-js-style": "^1.2.0",
     "zod": "^3.25.76"
   },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,css,md}": [
+      "prettier --write"
+    ]
+  },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@playwright/test": "^1.58.2",
@@ -102,10 +114,13 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "fast-check": "^4.5.3",
     "globals": "^15.15.0",
+    "husky": "^9.1.7",
     "jsdom": "^20.0.3",
+    "lint-staged": "^16.2.7",
     "lovable-tagger": "^1.1.13",
     "msw": "^2.12.10",
     "postcss": "^8.5.6",
+    "prettier": "^3.8.1",
     "react-use-gesture": "^9.1.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
