--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "fast-check": "^4.5.3",
     "globals": "^15.15.0",
     "husky": "^9.1.7",
+    "jest-axe": "^10.0.0",
     "jsdom": "^20.0.3",
     "lint-staged": "^16.2.7",
     "lovable-tagger": "^1.1.13",
