--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -107,8 +107,10 @@ jobs:
       
       - name: Run E2E tests
         run: npm run test:e2e
+        env:
+          CI: true
       
-      - name: Upload Playwright report
+      - name: Upload Playwright HTML report
         if: failure()
         uses: actions/upload-artifact@v4
         with:
@@ -116,13 +118,40 @@ jobs:
           path: playwright-report/
           retention-days: 7
       
-      - name: Upload test results
+      - name: Upload test results (JSON)
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: test-results
           path: test-results/
           retention-days: 7
+      
+      - name: Upload screenshots
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-screenshots
+          path: test-results/**/*.png
+          retention-days: 7
+          if-no-files-found: ignore
+      
+      - name: Upload videos
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-videos
+          path: test-results/**/*.webm
+          retention-days: 7
+          if-no-files-found: ignore
+      
+      - name: Upload traces
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-traces
+          path: test-results/**/*.zip
+          retention-days: 7
+          if-no-files-found: ignore
 
   build:
     name: Build
