feat: implement Midtrans payment integration with subscription system
- Add Midtrans payment gateway integration
- Implement subscription tiers (Free, Pro, Enterprise)
- Add usage tracking and limits
- Create billing dashboard
- Add Supabase Edge Functions for payment processing
- Implement webhook handler for payment notifications
- Add property-based tests for subscription features
- Include comprehensive documentation and testing guides

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,17 @@ dist-ssr
 *.sln
 *.sw?
 **/tempobook/**
+
+# Environment files
+.env
+.env.local
+.env.*.local
+.env.backup
+
+# Midtrans testing
+test-results/
+*.backup
+
+# Supabase
+.temp/
+.branches/
