--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "x-data-spreadsheet": "^1.1.9",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0",
     "zod": "^3.25.76"
@@ -117,6 +118,7 @@
     "husky": "^9.1.7",
     "jest-axe": "^10.0.0",
     "jsdom": "^20.0.3",
+    "less": "^4.5.1",
     "lint-staged": "^16.2.7",
     "lovable-tagger": "^1.1.13",
     "msw": "^2.12.10",
