--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@fortune-sheet/react": "^1.0.4",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
