--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:mobile": "playwright test --project='Mobile Chrome' --project='Mobile Safari'",
     "test:e2e:debug": "playwright test --debug",
+    "test:supabase": "tsx test-supabase-connection.ts",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\""
   },
@@ -125,7 +126,9 @@
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
     "react-use-gesture": "^9.1.3",
+    "supabase": "^2.76.10",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.21.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
