--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "docx": "^8.5.0",
     "docx-preview": "^0.3.7",
     "embla-carousel-react": "^8.6.0",
+    "exceljs": "^4.4.0",
     "framer-motion": "^10.16.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
