--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-virtual": "^3.13.18",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@univerjs/preset-sheets-core": "^0.15.5",
+    "@univerjs/presets": "^0.15.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
