--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@univerjs/preset-sheets-core": "^0.15.5",
     "@univerjs/presets": "^0.15.5",
+    "@univerjs/sheets": "^0.15.5",
+    "@univerjs/sheets-ui": "^0.15.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
