--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-virtual": "^3.13.18",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@univerjs/preset-sheets-conditional-formatting": "^0.15.5",
     "@univerjs/preset-sheets-core": "^0.15.5",
     "@univerjs/presets": "^0.15.5",
     "@univerjs/sheets": "^0.15.5",
